pkg/crate/libzt/src/libzt.rs

extern "C" {
    #[doc = " @brief Create a socket"]
    #[doc = ""]
    #[doc = " @param family `ZTS_AF_INET` or `ZTS_AF_INET6`"]
    #[doc = " @param type `ZTS_SOCK_STREAM` or `ZTS_SOCK_DGRAM`"]
    #[doc = " @param protocol Protocols supported on this socket"]
    #[doc = " @return Numbered file descriptor on success, `ZTS_ERR_SERVICE` if the node"]
    #[doc = "     experiences a problem, `ZTS_ERR_ARG` if invalid argument. Sets `zts_errno`"]
    pub fn zts_bsd_socket(
        family: ::std::os::raw::c_int,
        type_: ::std::os::raw::c_int,
        protocol: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief Connect a socket to a remote host"]
    #[doc = ""]
    #[doc = " @param fd Socket file descriptor"]
    #[doc = " @param addr Remote host address to connect to"]
    #[doc = " @param addrlen Length of address"]
    #[doc = " @return `ZTS_ERR_OK` if successful, `ZTS_ERR_SERVICE` if the node"]
    #[doc = "     experiences a problem, `ZTS_ERR_ARG` if invalid argument. Sets `zts_errno`"]
    pub fn zts_bsd_connect(
        fd: ::std::os::raw::c_int,
        addr: *const zts_sockaddr,
        addrlen: zts_socklen_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief Bind a socket to a local address"]
    #[doc = ""]
    #[doc = " @param fd Socket file descriptor"]
    #[doc = " @param addr Local interface address to bind to"]
    #[doc = " @param addrlen Length of address"]
    #[doc = " @return `ZTS_ERR_OK` if successful, `ZTS_ERR_SERVICE` if the node"]
    #[doc = "     experiences a problem, `ZTS_ERR_ARG` if invalid argument. Sets `zts_errno`"]
    pub fn zts_bsd_bind(
        fd: ::std::os::raw::c_int,
        addr: *const zts_sockaddr,
        addrlen: zts_socklen_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief Listen for incoming connections on socket"]
    #[doc = ""]
    #[doc = " @param fd Socket file descriptor"]
    #[doc = " @param backlog Number of backlogged connections allowed"]
    #[doc = " @return `ZTS_ERR_OK` if successful, `ZTS_ERR_SERVICE` if the node"]
    #[doc = "     experiences a problem, `ZTS_ERR_ARG` if invalid argument. Sets `zts_errno`"]
    pub fn zts_bsd_listen(
        fd: ::std::os::raw::c_int,
        backlog: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief Accept an incoming connection"]
    #[doc = ""]
    #[doc = " @param fd Socket file descriptor"]
    #[doc = " @param addr Address of remote host for accepted connection"]
    #[doc = " @param addrlen Length of address"]
    #[doc = " @return New file descriptor if successful, `ZTS_ERR_SERVICE` if the node"]
    #[doc = "     experiences a problem, `ZTS_ERR_ARG` if invalid argument. Sets `zts_errno`"]
    pub fn zts_bsd_accept(
        fd: ::std::os::raw::c_int,
        addr: *mut zts_sockaddr,
        addrlen: *mut zts_socklen_t,
    ) -> ::std::os::raw::c_int;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct zts_linger {
    pub l_onoff: ::std::os::raw::c_int,
    pub l_linger: ::std::os::raw::c_int,
}
#[test]
fn bindgen_test_layout_zts_linger() {
    assert_eq!(
        ::std::mem::size_of::<zts_linger>(),
        8usize,
        concat!("Size of: ", stringify!(zts_linger))
    );
    assert_eq!(
        ::std::mem::align_of::<zts_linger>(),
        4usize,
        concat!("Alignment of ", stringify!(zts_linger))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<zts_linger>())).l_onoff as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(zts_linger),
            "::",
            stringify!(l_onoff)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<zts_linger>())).l_linger as *const _ as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(zts_linger),
            "::",
            stringify!(l_linger)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct zts_ip_mreq {
    pub imr_multiaddr: zts_in_addr,
    pub imr_interface: zts_in_addr,
}
#[test]
fn bindgen_test_layout_zts_ip_mreq() {
    assert_eq!(
        ::std::mem::size_of::<zts_ip_mreq>(),
        8usize,
        concat!("Size of: ", stringify!(zts_ip_mreq))
    );
    assert_eq!(
        ::std::mem::align_of::<zts_ip_mreq>(),
        4usize,
        concat!("Alignment of ", stringify!(zts_ip_mreq))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<zts_ip_mreq>())).imr_multiaddr as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(zts_ip_mreq),
            "::",
            stringify!(imr_multiaddr)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<zts_ip_mreq>())).imr_interface as *const _ as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(zts_ip_mreq),
            "::",
            stringify!(imr_interface)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct zts_in_pktinfo {
    pub ipi_ifindex: ::std::os::raw::c_uint,
    pub ipi_addr: zts_in_addr,
}
#[test]
fn bindgen_test_layout_zts_in_pktinfo() {
    assert_eq!(
        ::std::mem::size_of::<zts_in_pktinfo>(),
        8usize,
        concat!("Size of: ", stringify!(zts_in_pktinfo))
    );
    assert_eq!(
        ::std::mem::align_of::<zts_in_pktinfo>(),
        4usize,
        concat!("Alignment of ", stringify!(zts_in_pktinfo))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<zts_in_pktinfo>())).ipi_ifindex as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(zts_in_pktinfo),
            "::",
            stringify!(ipi_ifindex)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<zts_in_pktinfo>())).ipi_addr as *const _ as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(zts_in_pktinfo),
            "::",
            stringify!(ipi_addr)
        )
    );
}
#[repr(C)]
#[derive(Copy, Clone)]
pub struct zts_ipv6_mreq {
    pub ipv6mr_multiaddr: zts_in6_addr,
    pub ipv6mr_interface: ::std::os::raw::c_uint,
}
#[test]
fn bindgen_test_layout_zts_ipv6_mreq() {
    assert_eq!(
        ::std::mem::size_of::<zts_ipv6_mreq>(),
        20usize,
        concat!("Size of: ", stringify!(zts_ipv6_mreq))
    );
    assert_eq!(
        ::std::mem::align_of::<zts_ipv6_mreq>(),
        4usize,
        concat!("Alignment of ", stringify!(zts_ipv6_mreq))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<zts_ipv6_mreq>())).ipv6mr_multiaddr as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(zts_ipv6_mreq),
            "::",
            stringify!(ipv6mr_multiaddr)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<zts_ipv6_mreq>())).ipv6mr_interface as *const _ as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(zts_ipv6_mreq),
            "::",
            stringify!(ipv6mr_interface)
        )
    );
}
extern "C" {
    #[doc = " @brief Set socket options."]
    #[doc = ""]
    #[doc = " @param fd Socket file descriptor"]
    #[doc = " @param level Protocol level to which option name should apply"]
    #[doc = " @param optname Option name to set"]
    #[doc = " @param optval Source of option value to set"]
    #[doc = " @param optlen Length of option value"]
    #[doc = " @return `ZTS_ERR_OK` if successful, `ZTS_ERR_SERVICE` if the node"]
    #[doc = "     experiences a problem, `ZTS_ERR_ARG` if invalid argument. Sets `zts_errno`"]
    pub fn zts_bsd_setsockopt(
        fd: ::std::os::raw::c_int,
        level: ::std::os::raw::c_int,
        optname: ::std::os::raw::c_int,
        optval: *const ::std::os::raw::c_void,
        optlen: zts_socklen_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief Get socket options."]
    #[doc = ""]
    #[doc = " @param fd Socket file descriptor"]
    #[doc = " @param level Protocol level to which option name should apply"]
    #[doc = " @param optname Option name to get"]
    #[doc = " @param optval Where option value will be stored"]
    #[doc = " @param optlen Length of value"]
    #[doc = " @return `ZTS_ERR_OK` if successful, `ZTS_ERR_SERVICE` if the node"]
    #[doc = "     experiences a problem, `ZTS_ERR_ARG` if invalid argument. Sets `zts_errno`"]
    pub fn zts_bsd_getsockopt(
        fd: ::std::os::raw::c_int,
        level: ::std::os::raw::c_int,
        optname: ::std::os::raw::c_int,
        optval: *mut ::std::os::raw::c_void,
        optlen: *mut zts_socklen_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief Get the name (address) of the local end of the socket"]
    #[doc = ""]
    #[doc = " @param fd Socket file descriptor"]
    #[doc = " @param addr Name associated with this socket"]
    #[doc = " @param addrlen Length of name"]
    #[doc = " @return `ZTS_ERR_OK` if successful, `ZTS_ERR_SERVICE` if the node"]
    #[doc = "     experiences a problem, `ZTS_ERR_ARG` if invalid argument. Sets `zts_errno`"]
    pub fn zts_bsd_getsockname(
        fd: ::std::os::raw::c_int,
        addr: *mut zts_sockaddr,
        addrlen: *mut zts_socklen_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief Get the name (address) of the remote end of the socket"]
    #[doc = ""]
    #[doc = " @param fd Socket file descriptor"]
    #[doc = " @param addr Name associated with remote end of this socket"]
    #[doc = " @param addrlen Length of name"]
    #[doc = " @return `ZTS_ERR_OK` if successful, `ZTS_ERR_SERVICE` if the node"]
    #[doc = "     experiences a problem, `ZTS_ERR_ARG` if invalid argument. Sets `zts_errno`"]
    pub fn zts_bsd_getpeername(
        fd: ::std::os::raw::c_int,
        addr: *mut zts_sockaddr,
        addrlen: *mut zts_socklen_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief Close socket."]
    #[doc = ""]
    #[doc = " @param fd Socket file descriptor"]
    #[doc = " @return `ZTS_ERR_OK` if successful, `ZTS_ERR_SERVICE` if the node"]
    #[doc = "     experiences a problem, `ZTS_ERR_ARG` if invalid argument. Sets `zts_errno`"]
    pub fn zts_bsd_close(fd: ::std::os::raw::c_int) -> ::std::os::raw::c_int;
}
#[repr(C)]
#[derive(Copy, Clone)]
pub struct zts_fd_set {
    pub fd_bits: [::std::os::raw::c_uchar; 128usize],
}
#[test]
fn bindgen_test_layout_zts_fd_set() {
    assert_eq!(
        ::std::mem::size_of::<zts_fd_set>(),
        128usize,
        concat!("Size of: ", stringify!(zts_fd_set))
    );
    assert_eq!(
        ::std::mem::align_of::<zts_fd_set>(),
        1usize,
        concat!("Alignment of ", stringify!(zts_fd_set))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<zts_fd_set>())).fd_bits as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(zts_fd_set),
            "::",
            stringify!(fd_bits)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct zts_timeval {
    pub tv_sec: ::std::os::raw::c_long,
    pub tv_usec: ::std::os::raw::c_long,
}
